# stegoeggo

./: .gitignore  AGENTS.md  AGENTS.override.md  CHANGELOG.md  Cargo.toml  DEPRECATIONS.md  LICENSE  README.md  SECURITY.md  STABILITY.md  SUPPORT.md  deny.toml  plan.md
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release-candidate.yml  release.yml
.skills/architecture-review/: SKILL.md
.skills/cloakrs-conventions/: SKILL.md
.skills/plan-execution/: SKILL.md
.skills/stegoeggo-conventions/: SKILL.md
architecture/: adr-c2pa.md  async-api.md  cli.md  conformance.md  constants.md  detached-manifest.md  error.md  jpeg-entropy.md  jpeg-header.md  jpeg-stego-f5.md  jpeg-transcoder.md  legal-metadata-field-mapping.md  overview.md  payload-v3.md  pipeline.md  protected-enhanced.md  protected-metadata-trap.md  protected-noise.md  protected-passthrough.md  protected-precomputed.md  protected-steganography.md  provenance-claim.md  review_plan.md  traits.md  types.md  util-image.md  util-iscc.md  util-seed.md
benches/: bench.rs
cloakrs-cli/: Cargo.toml
cloakrs-cli/src/: main.rs
cloakrs-cli/tests/: cli.rs
docs/: legal_notice_model.md  migration-v0.3.md
examples/: cdn_precomputed.rs  find_eoi.rs  find_main.rs  find_main_soi.rs  legal_metadata.rs  protect_and_verify.rs  verify_saved.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: detached_manifest_parse.rs  detached_manifest_verify.rs  jpeg_parser.rs  metadata_merge.rs  payload_v3_parser.rs  pipeline_bytes.rs  png_metadata.rs  provenance_canonicalize.rs  tiled_round_trip.rs  verification_report.rs  webp_riff_parser.rs  xmp_extract.rs
plans/: 001-docs-terminology-legal-notice-first.md  002-cli-legal-metadata-fields.md  003-evidence-profiles.md  004-profile-aware-warning-policy.md  005-verification-and-conformance-reporting.md  006-verification-polish-release-readiness.md  007-cleanup-verification-closeout.md  008-ci-and-release-gates.md  009-external-metadata-conformance.md  010-notice-verification-api-audit.md  011-docs-terminology-and-release-notes.md  012-robustness-and-cli-polish.md  013-webp-legal-xmp-conformance-corrective-pass.md  014-webp-xmp-rdf-structure-patch.md  015-standards-correctness-roadmap.md  016-release-1-canonical-rights-metadata.md  017-release-2-legal-metadata-semantics.md  018-release-3-independent-conformance.md  019-releases-1-3-closure-and-external-evidence.md  019-status.md  020-final-conformance-and-release-closure.md  020-status.md  021-final-evidence-and-gating-cleanup.md  022-release-4-policy-and-processing-separation.md  023-release-5-provenance-and-evidence-hardening.md  024-release-6-production-and-release-closure.md  024-status.md  025-security-integration-and-production-closure.md  026-final-payload-verification-and-release-closure.md  027-plan-026-corrective-closure.md  async-cli-review.md  core-framework.md  core-pipeline-review.md  error-review.md  jpeg-transcoder-review.md  jpeg-transcoder.md  legal-notice-first-roadmap.md  plan.md  protected-review.md  protection-strategies.md  (+5 more)
scripts/: validate-release.sh  verify_metadata_conformance.sh
src/: async_api.rs  conformance.rs  error.rs  lib.rs  resource_limits.rs  traits.rs  types.rs
src/detached/: generate.rs  manifest.rs  mod.rs  verify.rs
src/jpeg_transcoder/: entropy.rs  header.rs  mod.rs  stego_f5.rs
src/payload_v3/: errors.rs  header.rs  mod.rs  parser.rs  types.rs  writer.rs
src/protected/: constants.rs  ecc.rs  enhanced.rs  metadata_trap.rs  mod.rs  noise.rs  notice_verification.rs  passthrough.rs  precomputed.rs  resolve.rs  steganography.rs  stego_cost.rs
src/provenance/: canonical.rs  claim.rs  digest.rs  mod.rs
src/signing/: config.rs  ed25519_impl.rs  mod.rs
src/util/: image.rs  iscc.rs  mod.rs  seed.rs
src/verification/: builder.rs  mod.rs  report.rs
stegoeggo-cli/: Cargo.toml
stegoeggo-cli/src/: main.rs
stegoeggo-cli/tests/: cli.rs
tests/: async_integration.rs  basic.rs  canonical_rights.rs  conformance_container_tests.rs  conformance_harness_tests.rs  conformance_parser_tests.rs  cross_format_semantics.rs  detached_manifest_tests.rs  external_tools.rs  generate_conformance_fixtures.rs  independent_v3_parser.rs  integration.rs  known_answer_vectors.rs  merge_policy.rs  payload_v3_roundtrip.rs  plan026_gate1_2_3_tests.rs  preservation.rs  preservation_idempotence.rs  provenance_claim_tests.rs  request_api.rs  robustness.rs  semantic_correctness.rs  signing_tests.rs  soak_tests.rs  verification_report_tests.rs
tests/fixtures/: README.md
tests/fixtures/conformance/: README.md  manifest.toml
