[workspace]
resolver = "2"
members = [".", "stegoeggo-cli", "fuzz"]

[package]
name = "stegoeggo"
version = "0.2.3"
edition = "2021"
rust-version = "1.87"
description = "Rights-reservation metadata and AI-training restriction notices for images, with optional steganographic markers"
authors = ["David Bowman <dbowman91@proton.me>"]
license = "MIT"
repository = "https://github.com/eggstack/stegoeggo"
homepage = "https://github.com/eggstack/stegoeggo"
documentation = "https://docs.rs/stegoeggo"
readme = "README.md"
keywords = ["image", "steganography", "legal-notice", "ai-safety", "rights-metadata"]
categories = ["graphics", "multimedia::images"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
    "SUPPORT.md",
    "STABILITY.md",
    "DEPRECATIONS.md",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "benches/**/*.rs",
]

[features]
default = []
async = ["tokio"]
signatures = ["ed25519-dalek"]
test-seeds = []
fuzz = []
detached-manifest = []

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
jpeg-encoder = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
digest = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
crc32fast = "1.4"
iscc-lib = "0.4"
getrandom = "0.2"
rayon = "1.10"
toml = "1"
subtle = "2"
ed25519-dalek = { version = "3", features = ["zeroize"], optional = true }
zeroize = { version = "1", features = ["derive"] }
unicode-normalization = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["macros"] }
tempfile = "3"

[[test]]
name = "async_integration"
path = "tests/async_integration.rs"
required-features = ["async"]

[[bench]]
name = "bench"
harness = false

[[example]]
name = "protect_and_verify"
path = "examples/protect_and_verify.rs"

[[example]]
name = "verify_saved"
path = "examples/verify_saved.rs"

[[bin]]
name = "stegoeggo-conformance"
path = "src/bin/stegoeggo-conformance.rs"

[[example]]
name = "legal_metadata"
path = "examples/legal_metadata.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
