[package]
name = "cloakrs-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for cloakrs image protection library"
authors = ["David Bowman <dbowman91@proton.me>"]
license = "MIT"
repository = "https://github.com/anomalyco/cloakrs"

[[bin]]
name = "cloakrs"
path = "src/main.rs"

[dependencies]
cloakrs = { path = ".." }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rayon = "1.10"
hex = "0.4"
