[package]
name = "stegoeggo-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
stegoeggo = { path = "..", version = "0.3", features = ["fuzz"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "pipeline_bytes"
path = "fuzz_targets/pipeline_bytes.rs"
test = false
doc = false

[[bin]]
name = "tiled_round_trip"
path = "fuzz_targets/tiled_round_trip.rs"
test = false
doc = false

[[bin]]
name = "jpeg_parser"
path = "fuzz_targets/jpeg_parser.rs"
test = false
doc = false
