[package]
name = "stegoeggo-cli"
version = "0.2.3"
edition = "2021"
rust-version = "1.87"
description = "Command-line interface for the stegoeggo image protection library"
authors = ["David Bowman <dbowman91@proton.me>"]
license = "MIT"
repository = "https://github.com/eggstack/stegoeggo"
homepage = "https://github.com/eggstack/stegoeggo"
readme = "../README.md"
keywords = ["image", "steganography", "rights-metadata", "cli", "ai-safety"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "stegoeggo"
path = "src/main.rs"

[features]
default = []
signatures = ["stegoeggo/signatures", "stegoeggo/detached-manifest"]

[dependencies]
stegoeggo = { path = "..", version = "0.2", features = ["test-seeds"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rayon = "1.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[lints.rust]
unsafe_code = "forbid"
